tests/neg-custom-args/captures/class-caps.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/class-caps.scala:18:46 -----------------------------------
18 |  def addWritesToConsole: (Int, Int) -> Int = (a, b) => // error
   |                                              ^
   |                                       Found:    (a: Int, b: Int) ->{Test.this.console} Int
   |                                       Required: (Int, Int) -> Int
   |
   |                                       Note that capability Test.this.console is not included in capture set {}.
   |
19 |    log(s"adding a ($a) to b ($b)")(using console)
20 |    a + b
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/class-caps.scala:28:46 -----------------------------------
28 |  def addWritesToConsole: (Int, Int) -> Int = (a, b) => // error
   |                                              ^
   |                                      Found:    (a: Int, b: Int) ->{Test1.this.console} Int
   |                                      Required: (Int, Int) -> Int
   |
   |                                      Note that capability Test1.this.console is not included in capture set {}.
   |
29 |    log(s"adding a ($a) to b ($b)")(using console)
30 |    a + b
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg-custom-args/captures/class-caps.scala:35:6 -------------------------------------------------------
35 |  val console: Console^ = Console() // provide capability locally
   |      ^^^^^^^
   |      value console has a non-empty capture set but will not be added as
   |      a capability to computed capture sets since it is globally accessible
   |      as a member of static object Test2. Global values cannot be capabilities.
